测试aspect的配置

--- a/base-exception-starter-demo/src/main/resources/application.properties
+++ b/base-exception-starter-demo/src/main/resources/application.properties
@@ -4,5 +4,5 @@ exception.ui.enabled=true
 exception.email.sender=805344479@qq.com
 exception.email.host=smtp.qq.com
 exception.email.pwd=scyvkutzgxnxbbeh
-
+exception.scan.packages=exception.demo.base
 
